# Aqueous-2.0

./: .hgignore  CMakeLists.txt  SciDataViewer.sln
SciDataViewer/: CApplication.cpp  CApplication.h  CBathymetryRasterizer.cpp  CBathymetryRasterizer.h  CCameraWindowWidget.h  CDataLoader.h  CDataLoaderCSV.h  CDataManager.cpp  CDataManager.h  CDataSet.cpp  CDataSet.h  CDebugWindowWidget.h  CGeometryClipmapsSceneObject.SLayer.cpp  CGeometryClipmapsSceneObject.cpp  CGeometryClipmapsSceneObject.h  CGeometryClipmapsWindowWidget.h  CParticleSystem.cpp  CParticleSystem.h  CPointsWindowWidget.h  CViewerState.cpp  CViewerState.h  CVolumeSceneObject.cpp  CVolumeSceneObject.h  CWaterSurfaceSceneObject.cpp  CWaterSurfaceSceneObject.h  CatalinaOutline.h  ColorTable.cpp  ColorTable.h  LoadOxymapsCSVData.cpp  LoadPointsFromESRIASCII.cpp  LoadPointsFromXYZTxt.cpp  Main.cpp  SciDataViewer.vcxproj  SciDataViewer.vcxproj.filters  UTMtoLatLong.cpp  UTMtoLatLong.h
SciDataViewer/Assets/Shaders/: Diffuse.frag  Diffuse.vert  DiffuseShark.frag  GeometryClipmaps.frag  GeometryClipmaps.vert  Particle.frag  Particle.geom  Particle.vert  Volume.frag  WaterSurface.frag  WaterSurface.vert
SciDataViewer/shark/: Model.cpp  SharkSceneObject.cpp  SharkSceneObject.h  SharkSpineOscilator.cpp  SkeletalAnimation.cpp  SkeletalAnimation.h  Skeleton.cpp  Transform.cpp
SciDataViewer/spline/: CKeySpline.cpp  CKeySpline.h  CSplineSceneObject.cpp  CSplineSceneObject.h  KeySpline.cpp  SSplineNode.h  SplineNode.h  SplineSceneObject.cpp
src/: CApplication.cpp  CApplication.h  CCameraWindowWidget.h  CDataManager.cpp  CDataManager.h  CDataSet.h  CDebugWindowWidget.h  CParticleSystem.cpp  CParticleSystem.h  CPointsWindowWidget.h  CViewerState.cpp  CViewerState.h  CVolumeSceneObject.cpp  CVolumeSceneObject.h  CWaterSurfaceSceneObject.cpp  CWaterSurfaceSceneObject.h  CWindowWidget.cpp  CWindowWidget.h  SciDataViewer.vcxproj  SciDataViewer.vcxproj.filters
src/Data/: oxyMaps.csv
src/shark/: Model.cpp  Model.h  SharkSceneObject.cpp  SharkSceneObject.h  SharkSpineOscilator.cpp  SharkSpineOscilator.h  SkeletalAnimation.cpp  Skeleton.cpp  Skeleton.h  Transform.cpp  Transform.h  VertexBoneData.h
src/spline/: KeySpline.cpp  KeySpline.h  SplineNode.h  SplineSceneObject.cpp  SplineSceneObject.h  SplineType.h
(+11 files in other folders)
